docker/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pcp
  labels: { app.kubernetes.io/part-of: property-commerce-platform }
